--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,15 +5,19 @@ FROM python:3.8.2
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
-
+RUN dpkg --add-architecture i386
 RUN apt-get update \
-    && apt-get install -y netcat
-
+    && apt-get install -y netcat \
+    flex \
+    libc6:i386 \
+    libstdc++6:i386
 
 # Create an app user in the app group. 
 RUN useradd --user-group --create-home --no-log-init --shell /bin/bash app
 
 ENV APP_HOME=/home/app/web
+ENV LD_LIBRARY_PATH=/home/app/web/bulk
+
 
 # Create the staticfiles directory. This avoids permission errors. 
 RUN mkdir -p $APP_HOME/staticfiles
@@ -29,6 +33,15 @@ RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 COPY . $APP_HOME
 
+# RUN /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+
 RUN chown -R app:app $APP_HOME
+# RUN chown -R app:app /home/linuxbrew
 USER app
+
+#Install Bulk Extractor
+# RUN echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' >> /home/app/.profile
+# RUN eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+# RUN /home/linuxbrew/.linuxbrew/bin/brew install --build-from-source bulk_extractor; exit 0
+
 ENTRYPOINT ["/home/app/web/entrypoint.sh"]
