User can choose attributes for intersect

--- a/analyser/rules/hidden_processes.yml
+++ b/analyser/rules/hidden_processes.yml
@@ -3,4 +3,7 @@ condition:
     intersect:
         - module: PsScan
         - module: PsList
+        - attributes:
+            - PID
+            - ImageFileName
         - not: True
