--- a/analyser/rules/test_rule.yml
+++ b/analyser/rules/test_rule.yml
@@ -1,6 +1,6 @@
 title: This is a test rule
 condition:
     equals:
-        - module: NetScan
+        - module: NetStat
           attribute: Owner
         - iexplore.exe
