--- a/analyser/rules/hidden_net.yml
+++ b/analyser/rules/hidden_net.yml
@@ -4,6 +4,6 @@ condition:
         - module: NetScan
         - module: NetStat
         - attributes:
-            - PID
-            - Owner
+            PID : PID
+            Owner : Owner
         - not: True
