New rule parsing without filter

--- a/analyser/rules/fariet2.yml
+++ b/analyser/rules/fariet2.yml
@@ -1,6 +1,5 @@
 title: rundll32.exe
-condition:
-    equals:
-        - module: PsList
-          attribute: ImageFileName
-        - rundll32.exe
+selection:
+  module: PsList
+  fields:
+    - ImageFileName: rundll32.exe
