--- a/analyser/rules/parent.yml
+++ b/analyser/rules/parent.yml
@@ -1,6 +1,6 @@
 title: Suspicious childProcess
 selection:
-  module: PsList
+  module: PsScan
   fields:
     - ImageFileName: iexplore.exe
   filter:
