--- a/analyser/rules/test1.yml
+++ b/analyser/rules/test1.yml
@@ -2,4 +2,5 @@ title: test rule
 selection:
   module: NetStat
   fields:
-    - Owner: iexplore.exe
+    - Owner: iexplore.exe|svchost.exe|wininit.exe
+    - State: LISTENING
