--- a/analyser/rules/lsass_only_one_instance.yml
+++ b/analyser/rules/lsass_only_one_instance.yml
@@ -1,4 +1,4 @@
-title: lsass Only One Instance
+title: lsass.exe Only One Instance
 description: lsass.exe process shall exist in only one instance
 selection:
   module: PsScan
