Rules updates and bulk fix

--- a/analyser/rules/hidden_processes.yml
+++ b/analyser/rules/hidden_processes.yml
@@ -1,4 +1,5 @@
 title: Potential Hidden Processes
+description: Processes detected by PsScan but not PsList may be attempting detection evasion.
 intersect:
   selection1:
     module: PsScan
