--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ bcrypt==3.2.0
 cryptography==3.4.7
 Django==3.2.13
 django-crispy-forms==1.12.0
+docutils==0.19
 volatility3==2.0.1
 yara-python==4.1.3
 pycryptodome
